# Velma-AI

./: .gitignore  LICENSE  README.md  __init__.py  batch_build_50.py  extract_batch_to_marketplace.py  index.html  manifest.json  package-lock.json  package.json  profile.js  projects.txt  pyproject.toml  script.js  style.css  sw.js  vercel.json
pypi-package/: LICENSE  README.md  build_package.py  publish.sh  pyproject.toml
pypi-package/src/skillchain/: __init__.py
pypi-package/src/skillchain/debugger/: __init__.py  config.py  engine.py  error_parser.py  reporter.py  sandbox.py  scanner.py  test_runner.py  tournament.py
pypi-package/src/skillchain/debugger/tests/: test_engine.py  test_error_parser.py  test_fix_generator.py  test_reporter.py  test_sandbox.py  test_scanner.py  test_tournament.py
pypi-package/src/skillchain/governance_net/: __init__.py  config.py  evaluator.py  trainer.py
pypi-package/src/skillchain/governance_net/tests/: test_features.py  test_inference.py  test_synthetic_data.py  test_trainer.py
pypi-package/src/skillchain/graduation/: __init__.py  promotion_pipeline.py  skill_generator.py  skill_runner.py
pypi-package/src/skillchain/graduation/tests/: test_health_monitor.py  test_pattern_tracker.py  test_promotion_pipeline.py  test_skill_composer.py  test_skill_runner.py
pypi-package/src/skillchain/marketplace/api-integration-planner/: skill.md
pypi-package/src/skillchain/marketplace/b2b-lead-finder/: manifest.json
pypi-package/src/skillchain/marketplace/business-in-a-box/: skill.md
pypi-package/src/skillchain/marketplace/chains/: ai-agent-builder.chain.json  api-build.chain.json  career-pivot.chain.json  client-onboarding.chain.json  complaint-escalation.chain.json  content-machine.chain.json  content-to-customers.chain.json  deal-underwriting.chain.json  decision-deep-dive.chain.json  digital-life-setup.chain.json  discover-chains.chain.json  divorce-navigator.chain.json  ecommerce-optimize.chain.json  elder-care-setup.chain.json  financial-reset.chain.json  franchise-evaluator.chain.json  fundraise-prep.chain.json  investor-pitch.chain.json  layoff-recovery.chain.json  manager-first-90.chain.json  money-wake-up.chain.json  monthly-life-review.chain.json  morning-routine.chain.json  moving-complete.chain.json  open-source-launch.chain.json  patent-drawing-pipeline.chain.json  pricing-overhaul.chain.json  quarterly-strategy.chain.json  saas-launch.chain.json  skill-graduation.chain.json  solopreneur-daily.chain.json  something-went-wrong.chain.json  startup-validation.chain.json  terra-unita-setup.chain.json
pypi-package/src/skillchain/marketplace/code-review/: manifest.json
pypi-package/src/skillchain/marketplace/codebase-mapper/: manifest.json
pypi-package/src/skillchain/marketplace/cold-outreach-optimizer/: manifest.json
pypi-package/src/skillchain/marketplace/complaint-letter-writer/: skill.md
pypi-package/src/skillchain/marketplace/crypto-plain-english/: skill.md
pypi-package/src/skillchain/marketplace/dashboard-explainer/: skill.md
pypi-package/src/skillchain/marketplace/database-patterns/: manifest.json
pypi-package/src/skillchain/marketplace/debugging-strategies/: manifest.json  skill.md
pypi-package/src/skillchain/marketplace/decision-analyzer/: skill.md
pypi-package/src/skillchain/marketplace/energy-audit/: skill.md
pypi-package/src/skillchain/marketplace/expense-optimizer/: skill.md
pypi-package/src/skillchain/marketplace/explain-anything/: skill.md
pypi-package/src/skillchain/marketplace/fear-inventory/: skill.md
pypi-package/src/skillchain/marketplace/feedback-analyzer/: skill.md
pypi-package/src/skillchain/marketplace/gift-finder/: skill.md
pypi-package/src/skillchain/marketplace/ip-counsel/: skill.md
pypi-package/src/skillchain/marketplace/kpi-anomaly-detector/: manifest.json
pypi-package/src/skillchain/marketplace/life-os/: skill.md
pypi-package/src/skillchain/marketplace/market-entry-analyzer/: manifest.json
pypi-package/src/skillchain/marketplace/meeting-prep/: skill.md
pypi-package/src/skillchain/marketplace/multi-skill-orchestrator/: manifest.json
pypi-package/src/skillchain/marketplace/other-shoes/: skill.md
pypi-package/src/skillchain/sdk/: __init__.py  adapters.py  agent_skills_importer.py  chain_matcher.py  cli.py  cognitive_fabric.py  config.py  exceptions.py  ipfs_client.py  llm_executor.py  node.py  run_mcp.py  shadow_runner.py  skill_chain.py  skill_discovery.py  tiers.py  user_profile.py
pypi-package/src/skillchain/solopreneur/: __init__.py  config.py  outreach_generator.py  validator.py
sdk/: __init__.py  adapters.py  agent_social.py  chain_client.py  chain_miner.py  cli.py  config.py  gamification.py  hooks.py  node.py  pyproject.toml  skill_packer.py  skill_state.py  trust_reporter.py  velma_recommender.py
sdk/contracts/: __init__.py  addresses.py
sdk/mcp_bridge/: __init__.py  claude_settings.py  config.py  server.py
sdk/mcp_bridge/tests/: test_server.py
sdk/skillchain.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
sdk/templates/: manifest_template.json  skillchain_skill.md
sdk/tests/: __init__.py  test_gamification.py  test_ipfs_client.py  test_llm_executor.py  test_user_profile.py
(+1755 files in other folders)
