[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skillchain"
version = "0.1.0"
description = "Decentralized AI Skill-Sharing Network — publish, discover, validate, and trade AI skills across any agent platform"
readme = {text = "SkillChain — Decentralized AI Skill-Sharing Network", content-type = "text/plain"}
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [
    {name = "The Wayfinder Trust", email = "dev@wayfindertrust.org"},
]
keywords = ["ai", "skills", "blockchain", "trust", "marketplace", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "click>=8.0",
    "cryptography>=41.0",
    "rich>=13.0",
    "requests>=2.31",
    "numpy>=1.24",
]

[project.optional-dependencies]
web3 = ["web3>=6.0"]
mcp = ["mcp>=1.0"]
all = ["web3>=6.0", "mcp>=1.0"]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "pytest-mock>=3.10"]

[project.scripts]
skillchain = "skillchain.sdk.cli:cli"

[project.urls]
Homepage = "https://velma.ai"
Repository = "https://github.com/thewayfindertrust/skillchain"

# The repo root IS the "skillchain" package (has __init__.py).
# package-dir maps "skillchain" -> "." so imports work regardless of directory name.
[tool.setuptools]
packages = [
    "skillchain",
    "skillchain.sdk",
    "skillchain.sdk.contracts",
    "skillchain.sdk.mcp_bridge",
    "skillchain.sdk.mcp_bridge.tests",
    "skillchain.sdk.tests",
    "skillchain.core",
    "skillchain.core.protocol",
    "skillchain.core.protocol.tests",
    "skillchain.core.governance_net",
    "skillchain.core.governance_net.tests",
    "skillchain.tools",
    "skillchain.tools.debugger",
    "skillchain.tools.debugger.tests",
    "skillchain.tools.graduation",
    "skillchain.tools.graduation.tests",
    "skillchain.tools.solopreneur",
    "skillchain.tools.solopreneur.tests",
]

[tool.setuptools.package-dir]
skillchain = "."

[tool.pytest.ini_options]
testpaths = ["sdk/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
target-version = "py311"
line-length = 100
