[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skillchain"
version = "0.2.0"
description = "Decentralized AI Skill-Sharing Network — publish, discover, validate, and trade AI skills across any agent platform"
readme = "README.md"
license = {text = "Proprietary"}
requires-python = ">=3.10"
authors = [
    {name = "The Wayfinder Trust", email = "dev@wayfindertrust.org"},
]
keywords = ["ai", "skills", "blockchain", "trust", "marketplace", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "click>=8.0",
    "cryptography>=41.0",
    "rich>=13.0",
    "requests>=2.31",
    "numpy>=1.24",
    "mcp>=1.0",
]

[project.optional-dependencies]
web3 = ["web3>=6.0"]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[project.scripts]
skillchain = "skillchain.sdk.cli:cli"

[project.urls]
Homepage = "https://velma.ai"
Documentation = "https://velma.ai/docs"
Repository = "https://github.com/thewayfindertrust/skillchain"

[tool.hatch.build.targets.sdist]
include = ["src/skillchain"]

[tool.hatch.build.targets.wheel]
packages = ["src/skillchain"]
