[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skillchain"
version = "0.1.0"
description = "Decentralized AI Skill-Sharing Network SDK"
readme = {text = "SkillChain SDK — Decentralized AI Skill-Sharing Network", content-type = "text/plain"}
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [
    {name = "The Wayfinder Trust", email = "dev@wayfindertrust.org"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "click>=8.0",
    "web3>=6.0",
    "cryptography>=41.0",
    "rich>=13.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
]

[project.scripts]
skillchain = "skillchain.sdk.cli:cli"

[tool.setuptools.packages.find]
where = [".."]
include = ["skillchain*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
target-version = "py311"
line-length = 100
